--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,2 +1,69 @@
 body {
-  background-color: green; }
+  max-width: 1920px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #606f85;
+  font-family: "Poppins", Arial, sans-serif;
+  font-size: 17px;
+  line-height: 32px;
+  line-height: 1; }
+
+.menu {
+  list-style: none;
+  position: absolute;
+  display: block; }
+
+.menu__item {
+  float: left; }
+
+.menu__link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 80px;
+  text-transform: uppercase;
+  padding-left: 25px;
+  overflow: hidden; }
+
+.logo {
+  text-align: center; }
+
+.logo a {
+  display: block;
+  color: #fff;
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  font-style: italic;
+  line-height: 52px;
+  text-transform: uppercase;
+  text-decoration: none; }
+
+.menu__button {
+  float: right;
+  position: relative;
+  top: -40px; }
+
+.btn {
+  display: block;
+  color: #fff;
+  font-family: "Poppins", Arial, sans-serif;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 22px 41px 20px 40px;
+  -webkit-border-radius: 27px;
+          border-radius: 27px;
+  border: 2px solid #fff; }
+
+.banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../img/banner.png") no-repeat center top;
+  height: 1011px;
+  z-index: -1; }
