--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,74 +1,95 @@
-body 
-	max-width: 1920px
-	width: 100%
-	background-color: #ffffff
-	color: #606f85
-	font-family: "Poppins", Arial, sans-serif
-	font-size: 17px
-	line-height: 32px
-	line-height: 1
-	
+body
+    max-width: 1920px
+    // max-width for what ?
+    // Chrome Inspect -> Toggle Device Toolbar -> Width 2k+
+    width: 100%
+    background-color: #ffffff
+    color: #606f85
+    font-family: "Poppins", Arial, sans-serif
+    font-size: 17px
+    // LH for what ?
+    line-height: 32px
+    line-height: 1
+
 .menu
-	list-style: none
-	position: absolute
-	display: block
+    list-style: none
+    // Absolute for what ?
+    position: absolute
+    display: block
 
 .menu__item
-	float: left
-	
+    float: left
 
 .menu__link
-	text-decoration: none
-	color: #fff
-	font-size: 14px
-	font-weight: 400
-	line-height: 80px
-	text-transform: uppercase
-	padding-left: 25px
-	overflow: hidden
+    text-decoration: none
+    color: #fff
+    font-size: 14px
+    font-weight: 400
+    line-height: 80px
+    text-transform: uppercase
+    padding-left: 25px
+    overflow: hidden
 
-	
+
 .logo
-	text-align: center
-
+    text-align: center
 
 .logo a
-	display: block
-	color: #fff
-	font-family: "Oswald", Arial, sans-serif
-	font-size: 22px
-	font-weight: 700
-	font-style: italic
-	line-height: 52px
-	text-transform: uppercase
-	text-decoration: none
-
+    display: block
+    color: #fff
+    font-family: "Oswald", Arial, sans-serif
+    font-size: 22px
+    font-weight: 700
+    font-style: italic
+    line-height: 52px
+    text-transform: uppercase
+    text-decoration: none
 
 .menu__button
-	float: right
-	position: relative
-	top: -40px
-
-
+    float: right
+    position: relative
+    top: -40px
 
 .btn
-	display: block
-	color: #fff
-	font-family: "Poppins", Arial, sans-serif
-	text-decoration: none
-	font-size: 14px
-	font-weight: 400
-	text-transform: uppercase
-	padding: 22px 41px 20px 40px
-	border-radius: 27px;
-	border: 2px solid #fff;
+    display: block
+    color: #fff
+    //
+    //font-family: "Poppins", Arial, sans-serif
+    text-decoration: none
+    font-size: 14px
+    font-weight: 400
+    text-transform: uppercase
+    padding: 22px 41px 20px 40px
+    border-radius: 27px
+    border: 2px solid #fff
 
-.banner
-	position: absolute
-	top: 0
-	left: 0
-	right: 0
-	bottom: 0
-	background: url("../img/banner.png") no-repeat center top
-	height: 1011px
-	z-index: -1
+// Peremudril :D
+//
+//.banner
+//    position: absolute
+//    top: 0
+//    left: 0
+//    right: 0
+//    bottom: 0
+//    background: url("../img/banner.png") no-repeat center top
+//    height: 1011px
+//    z-index: -1
+
+.header
+    // Primer
+    height: 100vh
+    background: linear-gradient(red, yellow)
+
+
+// Example
+// To uncomment press Ctrl + '/'
+//
+//.nav
+//
+//.nav-menu
+//    &__item
+//
+//.nav-logo
+//    &__img
+//
+//.nav-btn
