--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,95 +1,86 @@
 body
-    max-width: 1920px
-    // max-width for what ?
-    // Chrome Inspect -> Toggle Device Toolbar -> Width 2k+
-    width: 100%
     background-color: #ffffff
     color: #606f85
     font-family: "Poppins", Arial, sans-serif
     font-size: 17px
-    // LH for what ?
-    line-height: 32px
-    line-height: 1
-
-.menu
-    list-style: none
-    // Absolute for what ?
-    position: absolute
-    display: block
-
-.menu__item
-    float: left
-
-.menu__link
-    text-decoration: none
-    color: #fff
-    font-size: 14px
-    font-weight: 400
-    line-height: 80px
-    text-transform: uppercase
-    padding-left: 25px
-    overflow: hidden
 
 
-.logo
-    text-align: center
-
-.logo a
-    display: block
-    color: #fff
-    font-family: "Oswald", Arial, sans-serif
-    font-size: 22px
-    font-weight: 700
-    font-style: italic
-    line-height: 52px
-    text-transform: uppercase
-    text-decoration: none
-
-.menu__button
-    float: right
-    position: relative
-    top: -40px
-
-.btn
-    display: block
-    color: #fff
-    //
-    //font-family: "Poppins", Arial, sans-serif
-    text-decoration: none
-    font-size: 14px
-    font-weight: 400
-    text-transform: uppercase
-    padding: 22px 41px 20px 40px
-    border-radius: 27px
-    border: 2px solid #fff
-
-// Peremudril :D
-//
-//.banner
-//    position: absolute
-//    top: 0
-//    left: 0
-//    right: 0
-//    bottom: 0
-//    background: url("../img/banner.png") no-repeat center top
-//    height: 1011px
-//    z-index: -1
 
 .header
-    // Primer
-    height: 100vh
-    background: linear-gradient(red, yellow)
+	height: 100vh
+	background-image: linear-gradient(to bottom, #bc52a8, #7442bc)
+
+.container
+	padding: 0 20px;
+	margin: 0 auto
+	&-section1
+		width: 1920px
 
 
-// Example
-// To uncomment press Ctrl + '/'
-//
-//.nav
-//
-//.nav-menu
-//    &__item
-//
-//.nav-logo
-//    &__img
-//
-//.nav-btn
+.nav
+	float: left
+	width: 100%
+	&-menu
+		float: left
+		width: 35%
+		padding: 0 
+		margin:
+			top: 70px
+			left: 79px
+
+		&__item
+			display: inline
+			font-weight: 400
+
+		&__link
+			text-decoration: none
+			color: #ffffff
+			font-size: 14px
+			text-transform: uppercase
+			padding-right: 25px
+
+.nav-logo
+	display: inline-block
+	margin:
+			top: 64px
+	&__img
+		padding:
+			right: 10px
+		width: 24px
+		height: 24px
+	
+.nav-logo
+	a
+		text-decoration: none
+		color: #ffffff
+		font-family: "Oswald", Arial, sans-serif
+		font-size: 22px
+		font-weight: 700
+		font-style: italic
+		text-transform: uppercase
+		padding:
+			bottom: 10px
+
+.nav-btn
+	display: inline-block;
+	float: right
+	// width: 35%
+	margin:
+		top: 48px
+		right: 80px
+	
+
+.btn
+	color: #ffffff
+	font-size: 14px
+	font-weight: 400
+	text-transform: uppercase
+	border-radius: 27px
+	border: 2px solid #ffffff
+	text-decoration: none
+	padding:
+		top: 22px
+		right: 41px
+		bottom: 20px
+		left: 40px
+	
