making nav__some changes

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -64,13 +64,14 @@ body
 .nav-btn
 	display: inline-block;
 	float: right
-	// width: 35%
+	width: 35%
 	margin:
 		top: 48px
 		right: 80px
 	
 
 .btn
+	float: right
 	color: #ffffff
 	font-size: 14px
 	font-weight: 400
