--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,10 +57,12 @@ body {
 .nav-btn {
   display: inline-block;
   float: right;
+  width: 35%;
   margin-top: 48px;
   margin-right: 80px; }
 
 .btn {
+  float: right;
   color: #ffffff;
   font-size: 14px;
   font-weight: 400;
