--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,15 +21,19 @@ body {
   padding: 0 20px;
   margin: 0 auto; }
   .container--nav {
-    width: 1920px; }
+    width: 1920px;
+    margin-left: 79px;
+    margin-right: 80px; }
 
 .nav {
-  float: left;
-  width: 100%; }
+  width: 100%;
+  line-height: 120px;
+  float: left; }
 
 .nav-menu {
+  width: 40%;
+  vertical-align: middle;
   float: left;
-  width: 35%;
   padding: 0; }
   .nav-menu__item {
     display: inline;
@@ -42,8 +46,9 @@ body {
     padding-right: 25px; }
 
 .nav-logo {
-  width: 30%;
+  width: 20%;
   display: inline-block;
+  vertical-align: middle;
   text-align: center; }
   .nav-logo__link {
     text-decoration: none;
@@ -59,11 +64,12 @@ body {
 
 .nav-btn {
   display: inline-block;
-  float: right;
-  width: 35%; }
+  vertical-align: middle;
+  text-align: right;
+  width: 40%;
+  float: right; }
 
 .btn {
-  float: right;
   color: #ffffff;
   font-size: 14px;
   font-weight: 400;
