--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -18,18 +18,26 @@ body
     margin: 0 auto
     &--nav
         width: 1920px
+        margin:
+        	left: 79px
+        	right: 80px
 
 .nav
-    float: left
     width: 100%
+    line-height: 120px
+    // position: relative
+    float: left
 
 .nav-menu
+    
+    width: 40%
+    vertical-align: middle
     float: left
-    width: 35%
     padding: 0
-    //margin:
-        //top: 70px
-        //left: 79px
+
+    // margin:
+    //     top: 70px
+    //     left: 79px
 
     &__item
         display: inline
@@ -43,11 +51,10 @@ body
         padding-right: 25px
 
 .nav-logo
-    width: 30%
+    width: 20%
     display: inline-block
+    vertical-align: middle
     text-align: center
-    //margin:
-    //    top: 64px
     &__link
         text-decoration: none
         color: #ffffff
@@ -56,24 +63,18 @@ body
         font-weight: 700
         font-style: italic
         text-transform: uppercase
-        //padding:
-        //    bottom: 10px
     &__img
-        //padding:
-        //    right: 10px
         width: 24px
         height: 24px
 
 .nav-btn
     display: inline-block
+    vertical-align: middle
+    text-align: right
+    width: 40%
     float: right
-    width: 35%
-//margin:
-//    top: 48px
-//right: 80px
 
 .btn
-    float: right
     color: #ffffff
     font-size: 14px
     font-weight: 400
@@ -82,9 +83,5 @@ body
     border: 2px solid #ffffff
     text-decoration: none
     padding: 20px 40px
-    //padding:
-    //    top: 22px
-    //    right: 41px
-    //    bottom: 20px
-    //    left: 40px
+    
 	
