--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,18 +21,14 @@ body {
   padding: 0 20px;
   margin: 0 auto; }
   .container--nav {
-    width: 1920px;
-    margin-left: 79px;
-    margin-right: 80px; }
+    width: 1920px; }
 
 .nav {
   width: 100%;
-  line-height: 120px;
-  float: left; }
+  line-height: 120px; }
 
 .nav-menu {
   width: 40%;
-  vertical-align: middle;
   float: left;
   padding: 0; }
   .nav-menu__item {
@@ -48,7 +44,6 @@ body {
 .nav-logo {
   width: 20%;
   display: inline-block;
-  vertical-align: middle;
   text-align: center; }
   .nav-logo__link {
     text-decoration: none;
@@ -64,7 +59,6 @@ body {
 
 .nav-btn {
   display: inline-block;
-  vertical-align: middle;
   text-align: right;
   width: 40%;
   float: right; }
