--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -8,9 +8,14 @@ body
     font-family: "Poppins", Arial, sans-serif
     font-size: 17px
 
+/* --- header --- */
+
 .header
     height: 100vh
     background-image: linear-gradient(to bottom, #bc52a8, #7442bc)
+    position: relative
+	
+/* --- navigation --- */
 
 .container
     max-width: 1680px
@@ -18,21 +23,19 @@ body
     margin: 0 auto
     &--nav
         width: 1920px
+    &--banner
+    	width: 1080px
 
 .nav
     width: 100%
-    line-height: 120px
+    line-height: 152px
 
 .nav-menu
-    
     width: 40%
     float: left
-    padding: 0
-
     &__item
         display: inline
         font-weight: 400
-
     &__link
         text-decoration: none
         color: #ffffff
@@ -57,19 +60,87 @@ body
         height: 24px
 
 .nav-btn
-    display: inline-block
-    text-align: right
-    width: 40%
-    float: right
+	display: inline-block
+	float: right
+	text-align: right
+	font-family: "Poppins",  Arial, sans-serif;
+	width: 40%
+	a
+		color: #ffffff
+		font-size: 14px
+		text-transform: uppercase
+		border-radius: 27px
+		border: 2px solid #ffffff
+		text-decoration: none
+		padding: 20px 40px
+
+/* --- banner --- */
+ 
+.banner
+	text-align: center
+
+	/* text-style */
+	&-head
+		opacity: 0.5
+		color: #ffffff
+		font-size: 24px
+		text-transform: uppercase
+		margin:
+			top: 142px
+	&-info
+		display: block
+		color: #ffffff
+		font-size: 76px
+		line-height: 90px
+		margin: 
+			top: 31px
+			bottom: 22px
+	&-descr
+		display: block
+		color: #ffffff
+		font-size: 24px
+		font-weight: 300
+		line-height: 42px
+		padding: 0 65px
+		margin:
+			bottom: 58px
 
 .btn
-    color: #ffffff
-    font-size: 14px
-    font-weight: 400
-    text-transform: uppercase
-    border-radius: 27px
-    border: 2px solid #ffffff
-    text-decoration: none
-    padding: 20px 40px
-    
-	
+	display: inline-block
+	vertical-align: middle;
+	width: 526px
+	height: 105px
+	border-radius: 53px
+	background-color: #ffffff
+	font-family: "Poppins",  Arial, sans-serif;
+	position: relative
+	&-banner
+		text-decoration: none
+		color: #673fbf
+		font-size: 24px
+		font-weight: 600
+		line-height: 104px
+		text-transform: uppercase
+		// margin:
+		// 	bottom: 23px 
+			
+		&:after
+			content: ''
+			display: block
+			position: absolute
+			top: -19px
+			right: 0px
+			left: -20px
+			bottom: 0
+			width: 566px
+			height: 145px
+			border-radius: 73px
+			background-color: #ffffff
+			opacity: 0.25
+
+
+		
+
+
+
+
