--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,8 +15,7 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
   background-image: -webkit-linear-gradient(top, #bc52a8, #7442bc);
   background-image: -o-linear-gradient(top, #bc52a8, #7442bc);
-  background-image: linear-gradient(to bottom, #bc52a8, #7442bc);
-  position: relative; }
+  background-image: linear-gradient(to bottom, #bc52a8, #7442bc); }
 
 /* --- navigation --- */
 .container {
@@ -25,8 +24,14 @@ body {
   margin: 0 auto; }
   .container--nav {
     width: 1920px; }
+    .container--nav:after {
+      content: "";
+      display: table;
+      clear: both; }
   .container--banner {
     width: 1080px; }
+  .container--about {
+    width: 870px; }
 
 .nav {
   width: 100%;
@@ -103,22 +108,25 @@ body {
     padding: 0 65px;
     margin-bottom: 58px; }
 
+/* --- buttons style --- */
 .btn {
   display: inline-block;
-  vertical-align: middle;
   width: 526px;
   height: 105px;
   -webkit-border-radius: 53px;
           border-radius: 53px;
-  background-color: #ffffff;
   font-family: "Poppins",  Arial, sans-serif;
   position: relative; }
   .btn-banner {
+    background-color: #ffffff;
     text-decoration: none;
     color: #673fbf;
     font-size: 24px;
     font-weight: 600;
-    line-height: 104px;
+    padding-top: 43px;
+    padding-right: 64px;
+    padding-bottom: 43px;
+    padding-left: 64px;
     text-transform: uppercase; }
     .btn-banner:after {
       content: '';
@@ -134,3 +142,49 @@ body {
               border-radius: 73px;
       background-color: #ffffff;
       opacity: 0.25; }
+  .btn-about {
+    background-color: #673fbf;
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding-top: 41px;
+    padding-right: 64px;
+    padding-bottom: 43px;
+    padding-left: 64px;
+    margin-top: 60px;
+    margin-bottom: 100px; }
+
+/* --- section about --- */
+.about {
+  background-image: -webkit-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  text-align: center;
+  margin-top: 140px; }
+  .about-preheading {
+    color: #673fbf;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase; }
+  .about-text {
+    line-height: 32px;
+    padding: 0 10px; }
+  .about-img {
+    margin-top: 40px;
+    margin-bottom: 10px; }
+
+h2 {
+  color: #29384d;
+  font-size: 42px;
+  font-weight: 600;
+  padding: 0 30px;
+  margin-top: 24px; }
+  h2:after {
+    content: '';
+    display: block;
+    width: 70px;
+    height: 4px;
+    background-color: #673fbf;
+    margin: 49px auto; }
