--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -13,18 +13,23 @@ body
 .header
     height: 100vh
     background-image: linear-gradient(to bottom, #bc52a8, #7442bc)
-    position: relative
 	
 /* --- navigation --- */
 
 .container
-    max-width: 1680px
-    padding: 0 20px
-    margin: 0 auto
-    &--nav
-        width: 1920px
-    &--banner
-    	width: 1080px
+	max-width: 1680px
+	padding: 0 20px
+	margin: 0 auto
+	&--nav
+		width: 1920px
+		&:after
+			content: ""
+			display: table
+			clear: both
+	&--banner
+		width: 1080px
+	&--about
+		width: 870px
 
 .nav
     width: 100%
@@ -105,25 +110,27 @@ body
 		margin:
 			bottom: 58px
 
+/* --- buttons style --- */
+
 .btn
 	display: inline-block
-	vertical-align: middle;
 	width: 526px
 	height: 105px
 	border-radius: 53px
-	background-color: #ffffff
 	font-family: "Poppins",  Arial, sans-serif;
 	position: relative
 	&-banner
+		background-color: #ffffff
 		text-decoration: none
 		color: #673fbf
 		font-size: 24px
 		font-weight: 600
-		line-height: 104px
+		padding:
+			top: 43px
+			right: 64px
+			bottom: 43px
+			left: 64px
 		text-transform: uppercase
-		// margin:
-		// 	bottom: 23px 
-			
 		&:after
 			content: ''
 			display: block
@@ -137,10 +144,55 @@ body
 			border-radius: 73px
 			background-color: #ffffff
 			opacity: 0.25
+	&-about
+		background-color: #673fbf
+		color: #ffffff
+		font-size: 24px
+		font-weight: 600
+		text-transform: uppercase
+		text-decoration: none
+		padding:
+			top: 41px
+			right: 64px
+			bottom: 43px
+			left: 64px
+		margin:
+			top: 60px
+			bottom: 100px
 
 
-		
+/* --- section about --- */
 
+.about
+	background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
+	text-align: center
+	margin:
+		top: 140px
+	&-preheading
+		color: #673fbf
+		font-size: 16px
+		font-weight: 600
+		text-transform: uppercase
+	&-text
+		line-height: 32px
+		padding: 0 10px
+	&-img
+		margin:
+			top: 40px
+			bottom: 10px
 
-
+h2 
+	color: #29384d
+	font-size: 42px
+	font-weight: 600
+	padding: 0 30px
+	margin:
+		top: 24px
+	&:after
+		content: ''
+		display: block
+		width: 70px
+		height: 4px
+		background-color: #673fbf
+		margin: 49px auto 
 
