--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,8 +14,7 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
   background-image: -webkit-linear-gradient(top, #bc52a8, #7442bc);
   background-image: -o-linear-gradient(top, #bc52a8, #7442bc);
-  background-image: linear-gradient(to bottom, #bc52a8, #7442bc);
-  padding: 50px 0; }
+  background-image: linear-gradient(to bottom, #bc52a8, #7442bc); }
 
 /* --- navigation --- */
 .container {
@@ -31,14 +30,14 @@ body {
   .container--banner {
     width: 1080px; }
   .container--about {
-    width: 870px; }
+    width: 910px;
+    padding-bottom: 40px; }
 
 .nav {
   width: 100%;
   line-height: 152px; }
 
 .nav-menu {
-  width: 40%;
   float: left; }
   .nav-menu__item {
     display: inline;
@@ -51,41 +50,22 @@ body {
     padding-right: 25px; }
 
 .nav-logo {
-  width: 20%;
-  display: inline-block;
-  text-align: center; }
-  .nav-logo__link {
-    text-decoration: none;
-    color: #ffffff;
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 22px;
-    font-weight: 700;
-    font-style: italic;
-    text-transform: uppercase; }
-  .nav-logo__img {
-    width: 24px;
-    height: 24px; }
+  width: 200px;
+  position: absolute;
+  top: 5px;
+  left: 0;
+  right: 0;
+  margin: 0 auto; }
 
 .nav-btn {
-  display: inline-block;
   float: right;
-  text-align: right;
-  font-family: "Poppins", Arial, sans-serif;
-  width: 40%; }
-  .nav-btn a {
-    color: #ffffff;
-    font-size: 14px;
-    text-transform: uppercase;
-    -webkit-border-radius: 27px;
-            border-radius: 27px;
-    border: 2px solid #ffffff;
-    text-decoration: none;
-    padding: 20px 40px; }
+  font-family: "Poppins", Arial, sans-serif; }
 
 /* --- banner --- */
 .banner {
   text-align: center;
   margin-top: 142px;
+  padding-bottom: 80px;
   /* text-style */ }
   .banner-head {
     opacity: 0.5;
@@ -115,6 +95,15 @@ body {
           border-radius: 53px;
   font-family: "Poppins", Arial, sans-serif;
   position: relative; }
+  .btn--nav {
+    color: #ffffff;
+    font-size: 14px;
+    text-transform: uppercase;
+    -webkit-border-radius: 27px;
+            border-radius: 27px;
+    border: 2px solid #ffffff;
+    text-decoration: none;
+    padding: 20px 40px; }
   .btn--banner {
     background-color: #ffffff;
     text-decoration: none;
@@ -139,6 +128,8 @@ body {
       opacity: 0.25; }
   .btn--about {
     background-color: #673fbf;
+    -webkit-box-shadow: 0 17px 25px rgba(122, 135, 157, 0.39);
+            box-shadow: 0 17px 25px rgba(122, 135, 157, 0.39);
     color: #ffffff;
     font-size: 24px;
     font-weight: 600;
@@ -147,17 +138,7 @@ body {
     padding: 41px 63px;
     margin: 60px 0 100px; }
 
-/* --- section about --- */
-.about {
-  background-image: -webkit-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
-  background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
-  background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
-  text-align: center;
-  margin-top: 140px; }
-  .about__img {
-    margin-top: 40px;
-    margin-bottom: 10px; }
-
+/* --- section about & about__client --- */
 .title {
   position: relative;
   color: #29384d;
@@ -188,4 +169,50 @@ body {
 
 .text {
   padding: 10px 0;
-  line-height: 32px; }
+  line-height: 32px;
+  text-align: center; }
+
+.about {
+  background-image: -webkit-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
+  text-align: center;
+  margin-top: 140px; }
+  .about__img {
+    margin: 40px 0 10px; }
+  .about__client {
+    width: 870px;
+    height: 385px;
+    -webkit-box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06);
+            box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06);
+    -webkit-border-radius: 6px;
+            border-radius: 6px;
+    background-color: #ffffff;
+    position: relative; }
+    .about__client_info {
+      padding: 109px 95px 0px; }
+
+.client {
+  padding-top: 39px;
+  font-weight: 600; }
+  .client_photo {
+    width: 128px;
+    height: 128px;
+    background-color: #74328e;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    position: absolute;
+    top: -17%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  .client_name {
+    color: #673fbf; }
+  .client_position {
+    color: #29384d; }
+
+.quotes {
+  position: relative;
+  top: 35px;
+  left: -55%; }
