--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,9 +19,10 @@ body {
 /* --- container width&style --- */
 .container {
   max-width: 1680px;
-  padding: 0 20px;
+  padding: 140px 20px 140px;
   margin: 0 auto; }
   .container--nav {
+    padding-top: 0;
     width: 1920px; }
     .container--nav:after {
       content: "";
@@ -30,8 +31,7 @@ body {
   .container--banner {
     width: 1080px; }
   .container--about {
-    width: 910px;
-    padding-bottom: 40px; }
+    width: 910px; }
   .container--services {
     width: 1920px; }
 
@@ -67,7 +67,6 @@ body {
 /* --- banner --- */
 .banner {
   text-align: center;
-  margin-top: 142px;
   padding-bottom: 80px;
   /* text-style */ }
   .banner-head {
@@ -187,8 +186,7 @@ body {
   background-image: -webkit-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
-  text-align: center;
-  margin-top: 140px; }
+  text-align: center; }
   .about__img {
     margin: 40px 0 10px; }
   .about__client {
@@ -230,11 +228,14 @@ body {
 
 /* --- section services --- */
 .services {
-  background: url(../img/services-bg.png) no-repeat center;
+  background: -webkit-linear-gradient(75deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%);
+  background: -o-linear-gradient(75deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%);
+  background: linear-gradient(15deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%);
   text-align: center; }
   .services__item {
     display: inline-block;
     vertical-align: top;
+    text-align: left;
     margin: 90px 30px;
     width: 370px;
     height: 332px;
@@ -265,7 +266,7 @@ body {
       font-weight: 600;
       line-height: 36px; }
     .services__item_text {
-      padding: 33px 54px 40px 40px;
+      padding: 20px 54px 40px 40px;
       color: #606f85;
       font-weight: 300;
       line-height: 32px; }
