--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,21 +16,22 @@ body
 /* --- container width&style --- */
 
 .container
-    max-width: 1680px
-    padding: 0 20px
-    margin: 0 auto
-    &--nav
-        width: 1920px
-        &:after
-            content: ""
-            display: table
-            clear: both
-    &--banner
-        width: 1080px
-    &--about
-        width: 910px
-        padding-bottom: 40px
-    &--services
+	max-width: 1680px
+	padding: 140px 20px 140px
+	margin: 0 auto
+	&--nav
+		padding-top: 0
+		width: 1920px
+		&:after
+			content: ""
+			display: table
+			clear: both
+	&--banner
+		width: 1080px
+	&--about
+		width: 910px
+		// padding-bottom: 40px
+	&--services
     	width: 1920px
 
 /* --- navigation --- */
@@ -67,7 +68,7 @@ body
  
 .banner
     text-align: center
-    margin-top: 142px
+    // margin-top: 142px
     padding-bottom: 80px;
 
     /* text-style */
@@ -151,7 +152,6 @@ body
 	font-size: 42px
 	font-weight: 600
 	padding: 0 30px
-	// margin-top: 24px
 	&--texted
 		&:before
 			content: 'HOW WE CAN HELP YOU'
@@ -186,7 +186,7 @@ body
 .about
 	background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
 	text-align: center
-	margin-top: 140px
+	// padding-top: 140px
 	&__img
 		margin: 40px 0 10px
 	&__client
@@ -225,12 +225,12 @@ body
 /* --- section services --- */
 
 .services
-	background: url(../img/services-bg.png) no-repeat center
+	background: linear-gradient(15deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%)
 	text-align: center
 	&__item
 		display: inline-block;
 		vertical-align: top;
-
+		text-align: left
 		margin: 90px 30px
 		width: 370px
 		height: 332px
@@ -256,7 +256,7 @@ body
 			font-weight: 600
 			line-height: 36px
 		&_text
-			padding: 33px 54px 40px 40px
+			padding: 20px 54px 40px 40px
 			color: #606f85
 			font-weight: 300
 			line-height: 32px
