--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -183,6 +183,9 @@ body
 		margin: 0 auto
 		color: #fff
 		font-weight: 300
+	&-portfolio
+		width: 500px
+		margin: 0 auto
 .about
 	background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
 	text-align: center
@@ -260,3 +263,58 @@ body
 			color: #606f85
 			font-weight: 300
 			line-height: 32px
+
+/* --- section portfolio --- */
+
+.portfolio 
+	&__item
+		display: block
+		text-align: left
+		margin: 0 auto
+		padding-top: 40px
+		overflow: hidden
+		width: 1170px;
+		height: 587px;
+		box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
+		border-radius: 5px;
+		background-color: #ffffff;
+		vertical-align: top
+		&-info
+			display: inline-block
+			width: 50%
+			vertical-align: top
+			padding: 64px 44px 10px
+			&_icon
+				width: 77px;
+				height: 77px;
+				background-color: #188afd;
+				border-radius: 50%
+				text-align: center
+				padding-top: 20px
+			&_heading
+				color: #29384d;
+				font-size: 24px;
+				font-weight: 600;
+				line-height: 36px;
+				padding: 30px 0 
+			&_text
+				text-align: left
+				padding-bottom: 28px
+			&_skills
+				display: block
+				float: left
+				color: #29384d;
+		&-img
+			display: inline-block
+			float: left
+			width: 50%
+.skills
+	float: left
+	margin-right: 10px
+	padding: 5px 13px 5px 14px
+	border-radius: 10px;
+	border: 1px solid #606f85;
+	color: #29384d;
+	font-size: 11px;
+	font-weight: 600;
+	text-transform: uppercase;
